Closed Bug 348804 Opened 18 years ago Closed 18 years ago

in-param for nsMsgKeyArray.h breaks obj-c build for embedded applications.

Categories

(MailNews Core :: Backend, defect)

1.8 Branch
PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: nick.kreeger, Assigned: nick.kreeger)

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

In msMsgKeyArray.h the following method is defined:

PRUint32 Add(nsMsgKey id) { ...

The problem with this is that |id| is a reserved keyword in objective-c, thus breaking any embedding support for cocoa applications.
Attached patch Proposed patch.Splinter Review
Here is a patch to fix this problem
Status: NEW → ASSIGNED
Assignee: nobody → nick.kreeger
Status: ASSIGNED → NEW
Comment on attachment 233928 [details] [diff] [review]
Proposed patch.

r=me on anything besides "id" for the var name. :)

If the mailnews maintainers has some preference for the var name, I defer to them.
Attachment #233928 - Flags: superreview?(bienvenu)
Attachment #233928 - Flags: review+
Comment on attachment 233928 [details] [diff] [review]
Proposed patch.

I'd prefer key. As long as that's OK, I'll change it to key and check that in...
Attachment #233928 - Flags: superreview?(bienvenu) → superreview+
It doesn't matter to me, I can check it in if you want with "key" (i have CVS access).
oh, ok, Nick, go ahead and check it in with key. If you need this on the 2.0 branch, you can land it there as well, or if you don't have a branch tree, I can do that.
Checked in to MOZILLA_1_8_BRANCH, waiting for my machine to spin a trunk build before i land it there.
Keywords: fixed1.8.1
Fixed trunk.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
I don't want to nitpick too much, but isn't approval1.8.1 needed these days for patches that go on the 1.8 branch (ok, I know, small patch, mailnews/-only, but still) :)?
(In reply to comment #8)
> I don't want to nitpick too much, but isn't approval1.8.1 needed these days for
> patches that go on the 1.8 branch (ok, I know, small patch, mailnews/-only, but
> still) :)?
> 

"If you need this on the 2.0
branch, you can land it there as well, or if you don't have a branch tree, I
can do that."

I understand, but since I was given the go ahead for 2.0 (1.8) i landed it, my bad.
If bienvenu has told you that you can checkin on 1.8 branch it's ok I guess (at least not your "fault" then :)...
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: