Fixing bug 348804, in-param for nsMsgKeyArray.h breaks obj-c build for embedded applications (cocoa-mac). r=hwaara, sr=bienvenu.